--- a/src/style.css
+++ b/src/style.css
@@ -33,27 +33,25 @@
 
 
 #coordinates {
-  position: absolute;
+  /* position: absolute;
   bottom: 30px;
   left: 20px;
-  z-index: 999;
-  /* background-color: #EEE6D8; */
+  background-color: #EEE6D8;
   background-color: white;
   border-radius: .5rem;
   padding: .5rem;
-  width: 15rem;
-  border: 3px solid #03C490;
+  width: 15rem; */
+  border-color: #03C490;
+
+  &:hover {
+    cursor: pointer;
+  }
 
   p {
     margin-bottom: 0;
-    font-weight: bold;
 
     &:last-child {
       margin-top: .5rem;
-    }
-
-    span {
-      font-weight: normal;
     }
   }
 
@@ -81,9 +79,28 @@
 }
 
 
-#goTo {
-  z-index: 9999;
+#toast {
   position: absolute;
-  top: 20px;
-  left: 300px;
+  bottom: 50px;
+  right: 10px;
+  background: #333;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+}
+#toast.show {
+  opacity: 1;
+}
+.toastError {
+  color: red;
+  background-color: tomato;
+  border-color: red;
+}
+
+
+.bold {
+  font-weight: bold;
 }
