--- a/src/style.css
+++ b/src/style.css
@@ -6,11 +6,15 @@
   box-sizing: border-box;
 }
 
+
+
 #map {
   width: 100%;
   height: 100vh;
   margin: auto;
 }
+
+
 
 #container {
   position: absolute;
@@ -23,13 +27,14 @@
 
   border: 3px solid #03C490;
   border-radius: .5rem;
+
+  &>* {
+    border: 2px solid rgb(240, 240, 240);
+    border-radius: .5rem;
+    padding: 1rem;
+  }
 }
 
-#container>* {
-  border: 2px solid rgb(240, 240, 240);
-  border-radius: .5rem;
-  padding: 1rem;
-}
 
 
 #coordinates {
@@ -54,8 +59,6 @@
       margin-top: .5rem;
     }
   }
-
-
 }
 
 
@@ -68,15 +71,16 @@
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
   z-index: 1000;
   min-width: 200px;
+
+  &.list-group-item {
+    cursor: pointer;
+
+    &:hover {
+      background: #f8f9fa;
+    }
+  }
 }
 
-#custom-context-menu .list-group-item {
-  cursor: pointer;
-}
-
-#custom-context-menu .list-group-item:hover {
-  background: #f8f9fa;
-}
 
 
 #toast {
@@ -90,15 +94,18 @@
   opacity: 0;
   transition: opacity 0.3s ease;
   pointer-events: none;
+
+  &.show {
+    opacity: 1;
+  }
+
+  &.toastError {
+    color: red;
+    background-color: #ffc3b8;
+    outline: 2px solid red;
+  }
 }
-#toast.show {
-  opacity: 1;
-}
-.toastError {
-  color: red;
-  background-color: tomato;
-  border-color: red;
-}
+
 
 
 .bold {
